cabal-version:      2.4
name:               hasql-api
version:            0.1.0.0
license:            MIT
copyright:          2022 Michal Kleczek
maintainer:         michal@kleczek.org
author:             Michal Kleczek
category:           Hasql, Database

-- TODO: Before hackage release.
-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

extra-source-files:
  LICENSE
  README.md

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -Wno-unused-top-binds -Wno-orphans
    -fprint-explicit-foralls -fprint-explicit-kinds

  default-extensions:
    AllowAmbiguousTypes
    MultiParamTypeClasses
    FunctionalDependencies
    ConstraintKinds
    DataKinds
    FlexibleContexts
    FlexibleInstances
    GADTs
    ScopedTypeVariables
    RankNTypes
    TypeFamilies
    TypeOperators
    UndecidableInstances

  default-language:   Haskell2010

library
  import: shared
  hs-source-dirs: src
  exposed-modules:
    Hasql.Api
    Hasql.Api.Session
    Hasql.Api.Eff
  build-depends:
    , base
    , bytestring
    , hasql
    , effectful-core

